--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Berkshire+Swash&family=Fredoka+One&family=Monoton&family=Press+Start+2P&family=Racing+Sans+One&family=Titan+One&display=swap');
+
+body {
+  font-family: 'Racing Sans One', cursive;}
+
 .App {
   text-align: center;
 }
@@ -20,7 +25,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
@@ -29,14 +34,18 @@
   background: linear-gradient(to right, #FE9457 0%, #69A7F6 50%, #50C164 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-} 
+  font-family: 'Racing Sans One', cursive;} 
 
 .weeks-running {
   background-color: #FE9457;
   display: flex;
   flex-direction: column;
   min-height: 300px;
-  max-height: 300px;
+  max-height: 400px;
+  font-family: 'Monoton', cursive;
+  font-size: 2vw;
+
+
 }
 
 .cans-recycled {
@@ -44,7 +53,10 @@
   display: flex;
   flex-direction: column;
   min-height: 300px;
-  max-height: 300px;
+  max-height: 400px;
+  font-family: 'Audiowide', cursive;
+  font-size: 2vw;
+
 }
 
 .amount-raised {
@@ -52,10 +64,45 @@
   display: flex;
   flex-direction: column;
   min-height: 300px;
-  max-height: 300px;
+  max-height: 400px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 2vw;
+
 }
 
-.thanks-info {
+.thanks-div {
+background-color: #000000;
+padding: 24px;
+margin: 24px;
+backdrop-filter: blur(16px) saturate(180%);
+-webkit-backdrop-filter: blur(16px) saturate(180%);
+/*     background-color: rgba(106, 116, 134, 0.75);
+*/    border-radius: 12px;
+border: 1px solid rgba(255, 255, 255, 0.125);
+padding: 24px;
+
+}
+.fs-top {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+/*     background-color: rgba(106, 116, 134, 0.75);
+ */    border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  padding: 24px;
+  margin:24px;
+  transform: scale(1.1); 
+
+  
+}
+
+.thanks {
+  background: #FE9457;
+  background: linear-gradient(to right, #FE9457 0%, #69A7F6 50%, #50C164 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Racing Sans One', cursive;}
+
+.survey {
   background: rgb(80,193,100);
 background: linear-gradient(126deg, rgba(80,193,100,1) 0%, rgba(254,148,87,1) 24%, rgba(105,167,246,1) 96%);  display: flex;
   flex-direction: column;
