--- a/src/Form.css
+++ b/src/Form.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+
+
 /* * {
     box-sizing: border-box;
     margin: 0;
@@ -15,6 +18,7 @@
     position:relative; 
     /* position:relative for .prevBtn and .nextBtn position:absolute; */
     text-align: center;
+
 }
 
 .form-box label{
@@ -40,6 +44,15 @@
     border: 1px solid black;
 }
 
+.fs {
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+/*     background-color: rgba(106, 116, 134, 0.75);
+ */    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    padding: 24px;
+}
+
 input[type="radio"],
 input[type="checkbox"] {
   height: 1.5em;
@@ -59,8 +72,8 @@ input[type="radio"] {
 	border:1px solid #dcdcdc;
 	display:inline-block;
 	cursor:pointer;
-	color:#666666;
-	font-family:Arial;
+	color: black;
+	font-family: 'Titan One', cursive;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
