--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,8 @@ body {
   min-height: 300px;
   max-height: 400px;
   font-family: 'Monoton', cursive;
-  font-size: 2vw;
+  font-size: 1.5vw;
+  vertical-align: top;
 
 
 }
@@ -55,7 +56,7 @@ body {
   min-height: 300px;
   max-height: 400px;
   font-family: 'Audiowide', cursive;
-  font-size: 2vw;
+  font-size: 1.5vw;
 
 }
 
@@ -66,7 +67,7 @@ body {
   min-height: 300px;
   max-height: 400px;
   font-family: 'Press Start 2P', cursive;
-  font-size: 2vw;
+  font-size: 1.5vw;
 
 }
 
@@ -83,8 +84,8 @@ padding: 24px;
 
 }
 .fs-top {
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  /* backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%); */
 /*     background-color: rgba(106, 116, 134, 0.75);
  */    border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
