--- a/src/App.css
+++ b/src/App.css
@@ -84,10 +84,10 @@ padding: 24px;
 
 }
 .fs-top {
-  /* backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%); */
-/*     background-color: rgba(106, 116, 134, 0.75);
- */    border-radius: 12px;
+/* backdrop-filter: blur(16px) saturate(180%);
+ */-webkit-backdrop-filter: blur(16px) saturate(180%);
+/* background-color: rgba(106, 116, 134, 0.75);
+ */border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
   padding: 24px;
   margin:24px;
